--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,35 @@
 @import "@penpot/plugin-styles/styles.css";
 
 body {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  padding: 10px;
+  margin: 0;
+  padding: 0;
 }
 
-p {
-  margin-block-end: 0.75rem;
+#iconsGrid {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px 0px;
+}
+
+svg {
+  width: 24px;
+  height: 24px;
+  user-select: none;
+  pointer-events: none;
+}
+
+button {
+  border-radius: 2px;
+  margin: 4px;
+  padding: 4px;
+  background-color: transparent !important;
+}
+
+input {
+  width: 100%;
+  position: fixed;
+  top: 10px;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
